<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/activity_about_how_work_app_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/srs_button"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_about_srs_button" />

        <Button
            android:id="@+id/game_button"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_about_game_button" />

        <Button
            android:id="@+id/vocabulary_button"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_about_vocabulary_button" />

        <Button
            android:id="@+id/options_button"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_about_options_button" />
    </LinearLayout>
</ScrollView>